--- a/single/css/module.scss
+++ b/single/css/module.scss
@@ -5,7 +5,7 @@
 	height:100vh;
 }
 .home-img {
-	background-image: url(../img/flower.jpg);
+	background-image: url(../img/home.jpg);
 	background-size:cover;
 	background-repeat:no-repeat;
 	height:100vh;
