--- a/single/css/main.css
+++ b/single/css/main.css
@@ -175,7 +175,7 @@ h4 {
   height: 100vh; }
 
 .home-img {
-  background-image: url(../img/home.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.75)), url(../img/home.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh; }
@@ -223,7 +223,7 @@ a:link {
   height: 100vh; }
 
 .home-img {
-  background-image: url(../img/home.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.75)), url(../img/home.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh; }
