--- a/single/css/module.scss
+++ b/single/css/module.scss
@@ -1,8 +1,6 @@
 .menu {
-	background-image: url(../img/cream.jpg);
-	background-size:cover;
-	background-repeat:repeat;
-	height:100vh;
+	position:fixed;
+	z-index:999;
 }
 .home-img {
 	background: linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.75)),url(../img/home.jpg);
@@ -19,9 +17,36 @@
 	}
 	.exact10 {
 		width:90% !important;
+		.fade {
+		    position: absolute;
+		    top: 0;
+		    left: 0;
+		    right: 0;
+		    height: 100%;
+		    opacity: 1;
+		}
+		.fade.ng-enter,
+		.fade.ng-leave {
+		    -webkit-transition: all 1s ease;
+		    transition: all 1s ease;
+		}
+		.fade.ng-enter {
+		    opacity: 0;
+		}
+		.fade.ng-enter-active {
+		    opacity: 1;
+		}
+		.fade.ng-leave {
+		    opacity: 1;
+		}
+		.fade.ng-leave-active {
+		    opacity: 0;
+		}
 	}
 	.menu-item{
 		transition:.75s background-color ease-in;
+		display: inline-block;
+		padding:0 15px;
 		.menu-link {
 			transition:.75s color ease-in;
 			padding:10px 0;
@@ -33,17 +58,8 @@
 			}
 		}	
 	}
-	.slider-circles {	
-		position:absolute;
-		bottom:8px;
-		left:50%;
-		.circle {
-			border-radius: 50%;
-			display:inline-block;
-			background-color: #E5FCF5;
-			margin:2px;			
-			width:12px;
-			height:12px;
-		}
+	.container {
+		max-width:1400px;
+		margin:0 auto;
 	}
 }
