--- a/single/css/module.scss
+++ b/single/css/module.scss
@@ -17,34 +17,9 @@
 	}
 	.exact10 {
 		width:90% !important;
-		.fade {
-		    position: absolute;
-		    top: 0;
-		    left: 0;
-		    right: 0;
-		    height: 100%;
-		    opacity: 1;
-		}
-		.fade.ng-enter,
-		.fade.ng-leave {
-		    -webkit-transition: all 1s ease;
-		    transition: all 1s ease;
-		}
-		.fade.ng-enter {
-		    opacity: 0;
-		}
-		.fade.ng-enter-active {
-		    opacity: 1;
-		}
-		.fade.ng-leave {
-		    opacity: 1;
-		}
-		.fade.ng-leave-active {
-		    opacity: 0;
-		}
 	}
 	.menu-item{
-		transition:.75s background-color ease-in;
+		
 		display: inline-block;
 		padding:0 15px;
 		.menu-link {
@@ -52,7 +27,7 @@
 			padding:10px 0;
 		}
 		&:hover {
-			background-color:#210124;
+			
 			.menu-link{
 				color: #E5FCF5 !important;
 			}
@@ -61,5 +36,10 @@
 	.container {
 		max-width:1400px;
 		margin:0 auto;
+	}
+	.home-page {
+		h1 {
+			color:white;
+		}
 	}
 }
